Changelog for Yancy

{{ $NEXT }}

1.078     2021-10-17 11:58:16-05:00 America/Chicago

    [Fixed]

    - Fixed links to IRC channel on Libera.chat. Thanks @kiwiroy and
      @lindleyw! [Github #135]
    - Fixed links in documentation from renaming in 1.070. Thanks
      @lindleyw! [Github #136]

1.077     2021-09-05 21:21:37-05:00 America/Chicago

    [Fixed]

    - Fixed model schema class fallbacks failing. By default, a simple
      skeleton Schema/Item object should be created if there is no more
      specific class to use.
    - Fixed model items to act more like item hashrefs
    - Fixed model schema get() method to pass options hash

1.076     2021-08-11 13:04:19-05:00 America/Chicago

    [Added]

    - Added has-a and has-many JOIN syntax to list() method, including
      the ability to query related tables. Yancy::Model could now
      virtually replace a DBIx::Class model layer.

    [Fixed]

    - Improved Yancy::Guides::Schema and Yancy::Guides::Model to read
      and scan more easily.

1.075     2021-08-07 15:03:12-05:00 America/Chicago

    *NOTE*: The `x-view` directive in schemas is deprecated and will be
    removed in v2. The Yancy::Model API allows for the same
    functionality in a cleaner, more powerful way. The Yancy editor and
    internals will be updated before v2 to use Yancy::Model methods so
    that everything works together.

    [Added]

    - Added basic has-a and has-many JOIN syntax to all backends' get()
      method. Now you can fetch related data in a single query!

    [Fixed]

    - Fixed link to skeleton app. Thanks @thowe for reporting this
      issue!

1.074     2021-06-18 12:55:53-05:00 America/Chicago

    [Added]

    - Added Yancy::Plugin::Roles for role-based access controls.
    - Added Yancy base application class with password auth and
      role-based access controls. This makes starting a new app as easy
      as `use Mojo::Base 'Yancy'`!

    [Fixed]

    - Fixed compatibility with JSON::Validator 4.20
