@@ -158,7 +158,7 @@ Mojolicious::Plugin::OpenAPI = 2.12 ; fix the GET /api breakage
 Mojolicious::Plugin::I18N = 1.6 ; Must be all-caps I18N!
 Role::Tiny = 2.000001 ; Required for Mojolicious roles
 Class::Method::Modifiers = 0 ; Required for around/before/after
-JSON::Validator = 4.20
+JSON::Validator = 5.00
 Sys::Hostname = 0
 File::Spec::Functions = 0
 FindBin = 0
